fixes jumping movement when flipcard and footer nav is used together

--- a/less/flipcard.less
+++ b/less/flipcard.less
@@ -31,6 +31,10 @@
 // flipcard component styling
 .flipcard-component {
 
+    .flipcard-inner {
+      overflow: hidden;
+    }
+
     .flipcard-multiple {
         width: 50%;
 
